--- a/about.qmd
+++ b/about.qmd
@@ -31,20 +31,20 @@ Through each of the systems I study, I strive to understand the ecological proce
 
 ### Current Personnel
 
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){alt="Tati Micheletti" width="232"}                                                                                                                                                                                                                                                                                  | ![Ana Raymundo](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/AnaRaymundo.jpg){alt="Ana Raymundo"} [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem.   |
-|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                                                                                                                                             |
-| [Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. |                                                                                                                                                                                                                                                                                                                                                                                             |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Isolde Lane Shaw](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/IsoldeLaneShaw.jpg){alt="Isolde Lane Shaw"} [Isolde Lane Shaw](https://borealbirds.ualberta.ca/2019/07/11/isolde-lane-shaw/) (PhD Student 2018-)                                                                                                                                                     | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="230"}                                                                                                                                                                                                                                       |
-|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                                                                                                                                             |
-|                                                                                                                                                                                                                                                                                                                                                                                              | [Geneviève Degré-Timmons](https://www.researchgate.net/profile/Genevieve-Degre-Timmons) (MSc Student 2021-) Geneviève is working on questions related to lichen and caribou in Northwest Territories. A student at Laval University.                                                                                                                                                        |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){width="232"}                                                                                                                                                                                                                                                                                                        | ![Ana Raymundo](https://borealbirds.ca/wp-content/uploads/2022/06/AnaRaymundo-430x524.jpg.webp){alt="Ana Raymundo" width="190"}                                                                                                                                  |
+|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
+| [Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. | [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem. |
++----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ![Isolde Lane Shaw](https://borealbirds.ca/wp-content/uploads/2022/06/Isolde-Lane-Shaw-upscale-2-430x524.jpg.webp){alt="Isolde Lane Shaw" width="190"}                                                                                                                                                                                                                                       | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="232"}                                                                                                            |
+|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
+| [Isolde Lane Shaw](https://borealbirds.ualberta.ca/2019/07/11/isolde-lane-shaw/) (PhD Student 2018-)                                                                                                                                                                                                                                                                                         | [Geneviève Degré-Timmons](https://www.researchgate.net/profile/Genevieve-Degre-Timmons) (MSc Student 2021-) Geneviève is working on questions related to lichen and caribou in Northwest Territories. A student at Laval University.                             |
++----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 ### Research Professional
 
 +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Ian Eddy](https://i1.rgstatic.net/ii/profile.image/382695852003328-1468253209265_Q128/Ian_Eddy.jpg){width="151"}                                                                                                                      |
+| ![Ian Eddy](https://media.licdn.com/dms/image/C5603AQGZ0O9dY7MY6A/profile-displayphoto-shrink_800_800/0/1517441920541?e=2147483647&v=beta&t=TkfotiDMOrioFqtLxJGvHJM2CZ365ZwRU02RtagdXEI){width="232"}                                   |
 |                                                                                                                                                                                                                                         |
 | [Ian Eddy](https://ca.linkedin.com/in/ian-eddy) (Canadian Forest Service \-- Geospatial Scientist 2018 - ) Ian works part time with our team on various topics related to cumulative effects, GIS, SpaDES, modeling and data analytics. |
 +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -52,23 +52,23 @@ Through each of the systems I study, I strive to understand the ecological proce
 ### Former Personel
 
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Ceres Barros](https://i1.rgstatic.net/ii/profile.image/705102948093955-1545121051789_Q512/Ceres_Barros.jpg){width="251"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | ![Frances Stewart](http://www.stewartresearch.ca/uploads/4/5/7/0/45702893/resized-20190127-151146_orig.jpg){alt="Frances Stewart" width="434"}                                                                                                                                                           |
+| ![Ceres Barros](https://i1.rgstatic.net/ii/profile.image/705102948093955-1545121051789_Q512/Ceres_Barros.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | ![Frances Stewart](http://www.stewartresearch.ca/uploads/4/5/7/0/45702893/resized-20190127-151146_orig.jpg){width="412"}                                                                                                                                                                                 |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Dr. Ceres Barros](https://www.landscapesinmotion.ca/) (Postdoctoral Fellow 2018-2023) Ceres was working on mixed severity spatial fire modeling and the associated vegetation changes that go with it, as part of the [Landscapes in Motion project](https://github.com/tati-micheletti/). She then worked on on ecological forecasting of permafrost, disturbance, and vegetation in Northwest Territories, in a collaboration with the [Forest Ecology Lab](https://www.forestecology.ca/) at Wilfrid Laurier University, as part of the [Northern Water Futures](https://northernwaterfutures.wordpress.com/) project. | [Dr. Frances Stewart](http://www.stewartresearch.ca/) (Postdoctoral Fellow 2019-2021)                                                                                                                                                                                                                    |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Alex Chubaty](https://friresearch.ca/sites/default/files/styles/fri_people_large/public/user-pictures/HLP_2018_07_alex-chubaty-headshot_web.jpg)                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | ![Alana Clason](https://bvcentre.ca/images/made/images/uploads/people_photos/Alana_Clason_200_300.jpg)                                                                                                                                                                                                   |
+| ![Alex Chubaty](https://friresearch.ca/sites/default/files/styles/fri_people_large/public/user-pictures/HLP_2018_07_alex-chubaty-headshot_web.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                            | ![Alana Clason](https://bvcentre.ca/images/made/images/uploads/people_photos/Alana_Clason_200_300.jpg){width="155"}                                                                                                                                                                                      |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Dr. Alex Chubaty](https://alexchubaty.com) (Postdoctoral Fellow 2017)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | [Dr. Alana Clason](https://bvcentre.ca/index.php/people/bio/alana_clason1) (PhD 2018) Dissertation: Whitebark pine at the northern edge: current constraints and future potential northern distribution under a changing climate. Currently a postdoctoral fellow at the Bulkley Valley Research Centre. |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Sarah Bauduin](https://www.sarahbauduin.fr/wp-content/uploads/2019/08/BauduinSarah_profil.jpg){width="224"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | ![](https://www.wavx.ca/theme/images/faces/jean_marchal.png){width="224"}                                                                                                                                                                                                                                |
+| ![Sarah Bauduin](https://www.sarahbauduin.fr/wp-content/uploads/2019/08/BauduinSarah_profil.jpg){width="174"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | ![](https://www.wavx.ca/theme/images/faces/jean_marchal.png){width="170"}                                                                                                                                                                                                                                |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Dr. Sarah Bauduin](https://www.sarahbauduin.fr/) (PhD 2017)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | [Dr. Jean Marchal](https://www.wavx.ca/) (PhD 2017)                                                                                                                                                                                                                                                      |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Sebastien Renard](https://i1.rgstatic.net/ii/profile.image/288757442990080-1445856547205_Q512/Sebastien_Renard2.jpg){width="242"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | ![Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/_/rsrc/1406753393787/home/Yong.jpg){width="183"}                                                                                                                                                                                            |
+| ![Sebastien Renard](https://i1.rgstatic.net/ii/profile.image/288757442990080-1445856547205_Q512/Sebastien_Renard2.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | ![Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/_/rsrc/1406753393787/home/Yong.jpg){width="174"}                                                                                                                                                                                            |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Sebastien Renard](https://www.researchgate.net/profile/Sebastien_Renard2) (PhD Student)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | [Dr. Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/home) (Postdoctoral Fellow 2017)                                                                                                                                                                                                         |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Josh Nowak](https://pbs.twimg.com/profile_images/1030880418554245120/PTIxTrMS_400x400.jpg){alt="Josh Nowak" width="280"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | ![Mario van Telgen](https://i1.rgstatic.net/ii/profile.image/426959055396868-1478806379526_Q512/Mario_Van_Telgen.jpg){width="226"}                                                                                                                                                                       |
+| ![Josh Nowak](https://pbs.twimg.com/profile_images/1030880418554245120/PTIxTrMS_400x400.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | ![Mario van Telgen](https://i1.rgstatic.net/ii/profile.image/426959055396868-1478806379526_Q512/Mario_Van_Telgen.jpg){width="232"}                                                                                                                                                                       |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Dr. Josh Nowak](https://www.speedgoat.io/story/) (PhD 2015)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | [Mario van Telgen](https://www.researchgate.net/profile/Mario_Van_Telgen) (PhD)                                                                                                                                                                                                                          |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
