changes by visual editor

--- a/posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.qmd
+++ b/posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.qmd
@@ -3,16 +3,15 @@ title: 'R Web App Development, Deployment, and Distribution'
 author: Olivia Sung
 date: Dec 8, 2015
 categories: [R, Shiny, Kitematic, Docker]
----
 comments: false
 ---
-As `R` language is becoming popular among scientists to build simple we bapplication along simple integration with `RShiny`, `R` web applications are being created at a fast rate. `RShiny` package is not only easy to integrate but also provides a lightweight user interface that is pleasing to the eyes.
+
+As `R` language is becoming popular among scientists to build simple we bapplication along simple integration with `RShiny`, `R` web applications are being created at a fast rate.
+`RShiny` package is not only easy to integrate but also provides a lightweight user interface that is pleasing to the eyes.
 
 How is `R` application developed?
 
 What is the process to deploy and distribute `R` web applications?
-
-
 
 ## Development
 
@@ -21,12 +20,12 @@ Below is a snapshot of what RStudio looks like.
 
 ![Snapshot of RStudio](../assets/img/2015-12-08rstudio.png){width="1845"}
 
-## Deployment 
-
+## Deployment
 
 ### Portable Applications
 
-For light `R` application that only needs a local deployment, `R` portable and web browser portable such as `Chrome` applications can be used. It does not require as much performance on end user's side and overall distribution will result in smaller files.
+For light `R` application that only needs a local deployment, `R` portable and web browser portable such as `Chrome` applications can be used.
+It does not require as much performance on end user's side and overall distribution will result in smaller files.
 
 *Refer to [this](https://www.r-bloggers.com/deploying-desktop-apps-with-r/) blog post by Lee Peng about Deploying Desktop Apps with R using portable apps*
 
@@ -34,14 +33,15 @@ For light `R` application that only needs a local deployment, `R` portable and w
 
 ### Shiny Server
 
-If you want to put your `Shiny` application on web, you can host it using Shiny Server. You would need to install, configure and manage the server yourself which could be complicated for some users.
+If you want to put your `Shiny` application on web, you can host it using Shiny Server.
+You would need to install, configure and manage the server yourself which could be complicated for some users.
 
-If you want an ultimate experience of `RShiny`, there is also a paid service [RShiny Server Pro](https://www.rstudio.com/products/shiny-server-pro/), where you can host your application on `Shiny` server. 
-There are a few useful functionalities that comes with the service such as 
+If you want an ultimate experience of `RShiny`, there is also a paid service [RShiny Server Pro](https://www.rstudio.com/products/shiny-server-pro/), where you can host your application on `Shiny` server.
+There are a few useful functionalities that comes with the service such as
 
-- User Access Control
-- Monitor application performance 
-- Monitor resource utilization 
+-   User Access Control
+-   Monitor application performance
+-   Monitor resource utilization
 
 However service is not cheap so if you have extra cash lying around, this would be a quick and easy way to host your application!
 
@@ -49,7 +49,8 @@ However service is not cheap so if you have extra cash lying around, this would 
 
 ### Shinyapps.io
 
-`shinyapps.io` is a multi-tenant platform as a service (PaaS) for hosting `Shiny` web applications. However it can also be expensive since the free edition can be limited depending on your needs.
+`shinyapps.io` is a multi-tenant platform as a service (PaaS) for hosting `Shiny` web applications.
+However it can also be expensive since the free edition can be limited depending on your needs.
 
 *Refer to [this](https://shiny.rstudio.com/articles/shinyapps.html) where you can discover how to get started with `shinyapps.io`*
 
@@ -63,14 +64,15 @@ However service is not cheap so if you have extra cash lying around, this would 
 
 Docker containers wrap up a piece of software in a complete filesystem that contains everything it needs to run:
 
-- Code
-- Runtime
-- System tools
-- System libraries
-- Anything you can install on a server
+-   Code
+-   Runtime
+-   System tools
+-   System libraries
+-   Anything you can install on a server
 
 This guarantees that it will always run the same, regardless of the environment it is running in.
-While this can be done with a virtual machine, `Docker` does not use a full OS, it shares the same host kernel meaning that it needs to run on Linux, but it is completely isolated environment. Since `Docker` containers are lighter than virtual machines, it makes testing much easier because you can always scrap that instance after!
+While this can be done with a virtual machine, `Docker` does not use a full OS, it shares the same host kernel meaning that it needs to run on Linux, but it is completely isolated environment.
+Since `Docker` containers are lighter than virtual machines, it makes testing much easier because you can always scrap that instance after!
 
 Docker can come in handy because you can create a `Shiny` server using few commands which simplifies deployment of a server.
 
@@ -78,24 +80,29 @@ Docker can come in handy because you can create a `Shiny` server using few comma
 
 ### OpenCPU HTTP API for R
 
-OpenCPU is an open source solution for embedded R computing. The software can be freely used, modified and redistributed for both for open source and proprietary projects in academia, industry or elsewhere. All parts of OpenCPU are released under the Apache2 license.  The free OpenCPU framework provides a reliable and interoperable HTTP API for R data analysis. You can either call the public servers or download and install OpenCPU’s code on your own servers.
+OpenCPU is an open source solution for embedded R computing.
+The software can be freely used, modified and redistributed for both for open source and proprietary projects in academia, industry or elsewhere.
+All parts of OpenCPU are released under the Apache2 license.
+The free OpenCPU framework provides a reliable and interoperable HTTP API for R data analysis.
+You can either call the public servers or download and install OpenCPU's code on your own servers.
 
 *Refer to [this blog post](https://www.jenunderwood.com/2015/01/12/part-1-integrating-r/) by Jen Underwood on how you can integrate R*
 
 ### Rook
 
 Rook is a lightweight web server interface for R developed by Jeffrey Horner that does not need any configuration file as Rook is a R package which works out of the box with R HTTP server.
-The idea behind this is to separate application development from server implementation. Thus, when a web server supports a web server interface, an application written to its specifications is guaranteed to run on that server.
+The idea behind this is to separate application development from server implementation.
+Thus, when a web server supports a web server interface, an application written to its specifications is guaranteed to run on that server.
 So then you would need to do some learning on HTTP to develop Rook applications.
 
 *Refer to [this blog post](https://www.r-bloggers.com/a-simple-web-application-using-rook/) by Ben Ogorek on a tutorial on building simple web application using Rook*
 
 *Refer to [this CRAN](https://cran.r-project.org/web/packages/Rook/README.html) for package description of Rook*
 
-
 ## Distribution
 
-If your end user has `RStudio`. then you can share your `R` files (ui.R and server.R) so that end user can run it through `RStudio`.
+If your end user has `RStudio`.
+then you can share your `R` files (ui.R and server.R) so that end user can run it through `RStudio`.
 
 If you have your own server, whether it be `AWS`, `Google Cloud`, `Microsoft Azure`, you can share it there.
 
