--- a/posts/2016-11-17-Putting_science_in_the_hands_of_policy_makers.qmd
+++ b/posts/2016-11-17-Putting_science_in_the_hands_of_policy_makers.qmd
@@ -8,125 +8,130 @@ comments: false
 ---
 
 
-Empirical data have a troublesome way of being both factually true, yet difficult to understand because they exist within a complex web of even more data. Worse, forecasting what the future will look like is an even greater challenge. Scientists have, for a long time, been working on these problems, often with great success, but the venue for reporting is generally peer reviewed journals. In 2014/15, we are now at the point that policy makers _must_ have faster access, and in a context-appropriate way, to utilize the forecasts made by scientists.  At CFS, there has been an effort to build integrated systems of communities, of data, and of models. What is still lacking is a delivery mechanism to put those forecasts into the hands of the policy makers.
+Empirical data have a troublesome way of being both factually true, yet difficult to understand because they exist within a complex web of even more data.
+Worse, forecasting what the future will look like is an even greater challenge.
+Scientists have, for a long time, been working on these problems, often with great success, but the venue for reporting is generally peer reviewed journals.
+In 2014/15, we are now at the point that policy makers *must* have faster access, and in a context-appropriate way, to utilize the forecasts made by scientists.
+At CFS, there has been an effort to build integrated systems of communities, of data, and of models.
+What is still lacking is a delivery mechanism to put those forecasts into the hands of the policy makers.
 
 ![](../assets/img/predictive_ecology_logo.png){style="float:right; margin: 20px;" width="237"}
 
-# The [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) User Tool 
+# The [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) User Tool
 
-  
-Our proof of concept [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) tool is currently available inside the Canadian Forest Service firewall. There are many key features that we were able to implement within the year time frame of the ADM Innovation Fund.
+Our proof of concept [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) tool is currently available inside the Canadian Forest Service firewall.
+There are many key features that we were able to implement within the year time frame of the ADM Innovation Fund.
 
-1. A question driven approach, agnostic to topic.
+1.  A question driven approach, agnostic to topic.
 
-  - Following suggestions from several individuals who are regularly involved with policy drafting (esp. Darcie Booth), we implemented the **What is the effect of X on Y in location Z**
-  
-2. Entirely interactive
+-   Following suggestions from several individuals who are regularly involved with policy drafting (esp. Darcie Booth), we implemented the **What is the effect of X on Y in location Z**
 
-  - The user has all the control, without overwhelmingly complex
-  
-3. There is a transparent responsibility chain
+2.  Entirely interactive
 
-  - Every module that is used is indicated on the Advanced Setup tab. This means that a user can track down the scientists, developers, and technicians who were responsible for the different parts.
-  
-4. Modular, i.e., can customize quickly
+-   The user has all the control, without overwhelmingly complex
 
-  - The app we have shown here is just one of many possible configurations. Any pieces can be removed, and other pieces can be added.
-  
-  
+3.  There is a transparent responsibility chain
+
+-   Every module that is used is indicated on the Advanced Setup tab. This means that a user can track down the scientists, developers, and technicians who were responsible for the different parts.
+
+4.  Modular, i.e., can customize quickly
+
+-   The app we have shown here is just one of many possible configurations. Any pieces can be removed, and other pieces can be added.
+
 # Using it
 
-Noting that all the specifics are changeable, the [current version](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) of the app is as follows: 
+Noting that all the specifics are changeable, the [current version](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) of the app is as follows:
 
-
-<img src="../assets/img/SpaDES opening 1.png" width="1901" style="float:right; margin: 20px; width: 400px" />
-
+<img src="../assets/img/SpaDES opening 1.png" width="1901" style="float:right; margin: 20px; width: 400px"/>
 
 <br>
 
-1. Interface is a live map of Canada. Default polygons are ecological, but can be switched to political.
+1.  Interface is a live map of Canada. Default polygons are ecological, but can be switched to political.
 
-  - Fill in blanks ("Effect of", "On", "In"). Each has a mouse hover over that gives suggestions.
-  
-  - Pick a date range.
-  
-  - Click Initiate and Start
-  
-  - Options at this stage include changing the polygons, base layers (which is strictly visual), turn things on and off.
-  
-  - Left hand side will allow a user to select the current simulation, or previous ones. Each time the "New Simulation " button on the bottom right is clicked, the user will get a new chance to start again.
-  
+-   Fill in blanks ("Effect of", "On", "In").
+    Each has a mouse hover over that gives suggestions.
 
-<img src="../assets/img/Initialize SpaDESUI.png" width="1897" style="float:right; margin: 20px; width: 400px" />
+-   Pick a date range.
 
+-   Click Initiate and Start
 
+-   Options at this stage include changing the polygons, base layers (which is strictly visual), turn things on and off.
 
-<br>
+-   Left hand side will allow a user to select the current simulation, or previous ones.
+    Each time the "New Simulation" button on the bottom right is clicked, the user will get a new chance to start again.
 
-2. Click on Initialize. This will select the appropriate modules that are required to answer the question. 
+<img src="../assets/img/Initialize SpaDESUI.png" width="1897" style="float:right; margin: 20px; width: 400px"/>
 
 <br>
-<br>
 
-3. Then Start (Start is hiding the Initialize in the version of the app available via the web link).
+2.  Click on Initialize. This will select the appropriate modules that are required to answer the question.
 
-4. If the area that was selected is large, and the time horizon is long, then the simulations will take some time. 
+<br> <br>
 
+3.  Then Start (Start is hiding the Initialize in the version of the app available via the web link).
 
-<img src="../assets/img/SpaDESUI output.png" width="1913" style="float:right; margin: 20px; width: 400px" />
+4.  If the area that was selected is large, and the time horizon is long, then the simulations will take some time.
 
+<img src="../assets/img/SpaDESUI output.png" width="1913" style="float:right; margin: 20px; width: 400px"/>
 
-5. The Results Analysis tab is still largely a work in progress. This will be where specific tabs will exist for "The effect of X on Y". There will be a default set of plots, figures, maps, but the user will be able to create more interactively.
+5.  The Results Analysis tab is still largely a work in progress. This will be where specific tabs will exist for "The effect of X on Y". There will be a default set of plots, figures, maps, but the user will be able to create more interactively.
 
 # Design comments
 
-We are currently very interested in design comments by a wide audience. 
+We are currently very interested in design comments by a wide audience.
 
 # Caveats
 
-Currently, this is a proof of concept. The text that is written in each box is not actually interpreted. We are still waiting to populate the [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/)  tool with more models to allow for this. But the tool is ready now, it can be modified and updated. See *Improvements to come* below.
+Currently, this is a proof of concept.
+The text that is written in each box is not actually interpreted.
+We are still waiting to populate the [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) tool with more models to allow for this.
+But the tool is ready now, it can be modified and updated.
+See *Improvements to come* below.
 
-
-  
 # Improvements to come
 
-1. Integrating models that are considered "operational", rather than just "research" models.
-2. Greater responsiveness, even with large questions.
-3. Improved modularity, allowing for a decentralized approach to designing unique apps for each given problem.
-
+1.  Integrating models that are considered "operational", rather than just "research" models.
+2.  Greater responsiveness, even with large questions.
+3.  Improved modularity, allowing for a decentralized approach to designing unique apps for each given problem.
 
 ## Certifying models
 
-To maximize the power of such an integrated tool, we, as an organization will have to design a system of "certifying" of operational models. Thus a particular [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) configuration can be given a name (e.g., "The CFS configuration") because it would have 12 certified CFS models, such as **CanFIRE**, **CBM-CFS3**, **BioSim** etc. Predictions could be relied upon by policy makers, especially when working in conjunction with the relevant scientists.
+To maximize the power of such an integrated tool, we, as an organization will have to design a system of "certifying" of operational models.
+Thus a particular [*inSpaDES*](https://w-vic-a105388.pfc.forestry.ca/SpaDESUI-devel/) configuration can be given a name (e.g., "The CFS configuration") because it would have 12 certified CFS models, such as **CanFIRE**, **CBM-CFS3**, **BioSim** etc.
+Predictions could be relied upon by policy makers, especially when working in conjunction with the relevant scientists.
 
 # Needs
 
-1. This proof of concept showed that we can build a software solution to the silo problems that have plagued science in general, but also the Canadian Forest Service. The current push to evaluate **Cumulative Effects** is intimately part of the SpaDES product. 
+1.  This proof of concept showed that we can build a software solution to the silo problems that have plagued science in general, but also the Canadian Forest Service.
+    The current push to evaluate **Cumulative Effects** is intimately part of the SpaDES product.
 
-2. More scientists in CFS to engage their work into being SpaDES-compatible. This is happening slowly through [workshops](https://github.com/PredictiveEcology/SpaDES/wiki), collaborations, [blog posts](https://predictiveecology.org), [how-to documents](https://github.com/PredictiveEcology/SpaDES/wiki/Getting-Started-Guide) and [wiki](https://github.com/PredictiveEcology/SpaDES/wiki), and self-driven work.
+2.  More scientists in CFS to engage their work into being SpaDES-compatible.
+    This is happening slowly through [workshops](https://github.com/PredictiveEcology/SpaDES/wiki), collaborations, [blog posts](https://predictiveecology.org), [how-to documents](https://github.com/PredictiveEcology/SpaDES/wiki/Getting-Started-Guide) and [wiki](https://github.com/PredictiveEcology/SpaDES/wiki), and self-driven work.
 
-3. Greater contributions from non-biophysical scientists (e.g., economists). Many of their models are linked to the biophysical world, but model integration is still limited.
+3.  Greater contributions from non-biophysical scientists (e.g., economists).
+    Many of their models are linked to the biophysical world, but model integration is still limited.
 
 # SpaDES Workshops
 
-We have begun to give [SpaDES workshops](https://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline) for the scientists. Soon, we will give much shorter WebEx workshops for users. These user workshops will be much shorter and will be mostly focused on the need for responsibility in interpreting results from complex systems.
-
+We have begun to give [SpaDES workshops](https://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline) for the scientists.
+Soon, we will give much shorter WebEx workshops for users.
+These user workshops will be much shorter and will be mostly focused on the need for responsibility in interpreting results from complex systems.
 
 # The tangible outcomes and applications
 
 A version of this is currently being modified for delivery to a consortium of 12 of the largest forest companies in the western boreal forests, at least 2 provincial governments and 1 territorial government, and 3 NGOs (including Ducks Unlimited).
 
-A version of this is likely going to be used by the {BEACONs project](https://www.beaconsproject.ca/), which is research organization building conservation planning.
+A version of this is likely going to be used by the {BEACONs project\](https://www.beaconsproject.ca/), which is research organization building conservation planning.
 
 A version of this will be used in the Environment and Climate Change Canada project for the 3rd phase of the caribou recovery plan.
 
 There are no publications yet, but there are several blog posts.
 
-#	Client testimonies
+# Client testimonies
 
-David Andison of fRI and numerous clients within the Healthy Landscape Initiative (forest companies) are extremely happy with this, and as a result has funded elements of further development of this project with over $150,000 over 2.5 years. We have not been collecting testimonials yet; we will.
+David Andison of fRI and numerous clients within the Healthy Landscape Initiative (forest companies) are extremely happy with this, and as a result has funded elements of further development of this project with over \$150,000 over 2.5 years.
+We have not been collecting testimonials yet; we will.
 
 # The value for money in this investment
 
 The ADM innovation fund was a critical part of the *initiation* of this project, which is now leading to many further developments, collaborations as described above.
-
