--- a/posts/2016-10-15-SpaDES-workshop.qmd
+++ b/posts/2016-10-15-SpaDES-workshop.qmd
@@ -3,9 +3,8 @@ title: 'Introduction to SpaDES Workshop (updated)'
 author: Eliot McIntire, Alex Chubaty
 date: October 15, 2016
 categories: [SpaDES, workshop, raster]
+comments: false
 ---
-
-## comments: false
 
 Alex Chubaty and I will be leading a 2nd [introductory SpaDES workshop](https://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline) this fall.
 This will essentially be the same course as the one offered in [September, 2016](https://rpubs.com/PredictiveEcology/Archives-Sept16-Outline).
