--- a/about.qmd
+++ b/about.qmd
@@ -49,7 +49,7 @@ Through each of the systems I study, I strive to understand the ecological proce
 | [Ian Eddy](https://ca.linkedin.com/in/ian-eddy) (Canadian Forest Service \-- Geospatial Scientist 2018 - ) Ian works part time with our team on various topics related to cumulative effects, GIS, SpaDES, modeling and data analytics. |
 +-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-### Former Personel
+### Former Personnel
 
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ![Ceres Barros](https://i1.rgstatic.net/ii/profile.image/705102948093955-1545121051789_Q512/Ceres_Barros.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | ![Frances Stewart](http://www.stewartresearch.ca/uploads/4/5/7/0/45702893/resized-20190127-151146_orig.jpg){width="412"}                                                                                                                                                                                 |
