misc cleanup + rebuild site

--- a/about.qmd
+++ b/about.qmd
@@ -32,11 +32,11 @@ Through each of the systems I study, I strive to understand the ecological proce
 ### Current Personnel
 
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){width="232"}                                                                                                                                                                                                                                                                                                        | ![Ana Raymundo](https://borealbirds.ca/wp-content/uploads/2022/06/AnaRaymundo-430x524.jpg.webp){alt="Ana Raymundo" width="190"}                                                                                                                                  |
+| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){width="232"}                                                                                                                                                                                                                                                                                                        | ![Ana Raymundo](https://borealbirds.ca/wp-content/uploads/2022/06/AnaRaymundo-430x524.jpg.webp){width="190"}                                                                                                                                                     |
 |                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
 | [Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. | [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem. |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Isolde Lane Shaw](https://borealbirds.ca/wp-content/uploads/2022/06/Isolde-Lane-Shaw-upscale-2-430x524.jpg.webp){alt="Isolde Lane Shaw" width="190"}                                                                                                                                                                                                                                       | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="232"}                                                                                                            |
+| ![Isolde Lane Shaw](https://borealbirds.ca/wp-content/uploads/2022/06/Isolde-Lane-Shaw-upscale-2-430x524.jpg.webp){width="190"}                                                                                                                                                                                                                                                              | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="232"}                                                                                                            |
 |                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
 | [Isolde Lane Shaw](https://borealbirds.ualberta.ca/2019/07/11/isolde-lane-shaw/) (PhD Student 2018-)                                                                                                                                                                                                                                                                                         | [Geneviève Degré-Timmons](https://www.researchgate.net/profile/Genevieve-Degre-Timmons) (MSc Student 2021-) Geneviève is working on questions related to lichen and caribou in Northwest Territories. A student at Laval University.                             |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
