--- a/index.qmd
+++ b/index.qmd
@@ -14,9 +14,7 @@ comments: false
 
 Welcome to the website of the Predictive Ecology Community\
 
+
+## PERFICT
+
 We are updating these pages over the next days; please stay tuned.
-
-## Latest news
-
-::: {#posts-listings}
-:::
