--- a/Workshops.qmd
+++ b/Workshops.qmd
@@ -10,7 +10,8 @@ listing:
     type: grid
     contents: 
       - workshops/June-2024-SpaDES-workshop.qmd
-    sort: date
+      - workshops/April-2024-EFI-SpaDES-Workshop.qmd
+    sort: "date asc"
     fields: [image, title, description, date]
     max-description-length: 1000000
     image-height: 250px
@@ -27,14 +28,17 @@ listing:
 ::: {#workshops-top}
 
 
-After an extended COVID hiatus, we will be holding workshops around [PERFICT](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994) and the SpaDES metapackage for R as a means of achieving a PERFICT approach. 
-
-**We will be adding content here over the next weeks.**
 
 :::
 
-::: {.column-margin}
-[![](https://onlinelibrary.wiley.com/cms/asset/680b22bc-1a97-4ab6-8f90-6fd1557e9e27/ele13994-fig-0001-m.jpg){fig-align="right" width=120%}](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994)
+::: {layout="[[60,40], [100]]"}
+
+After an extended COVID hiatus, we will be holding workshops around [PERFICT](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994) and the SpaDES metapackage for R as a means of achieving a PERFICT approach. 
+
+[![](https://onlinelibrary.wiley.com/cms/asset/680b22bc-1a97-4ab6-8f90-6fd1557e9e27/ele13994-fig-0001-m.jpg)](https://onlinelibrary.wiley.com/doi/full/10.1111/ele.13994)
+
+**We will be adding content here over the next weeks.**
+
 :::
 
 ## Upcoming workshops
