--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -10,4 +10,4 @@ categories:
 comments: false
 ---
 
-Under construction
+1-3 day SpaDES workshop intended for scientists who have some knowledge of R.
