--- a/bios/alana.qmd
+++ b/bios/alana.qmd
@@ -1,17 +1,21 @@
 ---
 title: "Dr Alana Clason"
 name: "Alana Clason"
-image: http://www.alanaclason.ca/uploads/1/9/2/0/1920735/published/profile-f-pic.jpg?1543515225
+image: http://www.alanaclason.ca/uploads/1/9/2/0/1920735/published/profile-f-pic.jpg
 comments: false
 about: 
   id: alana
   template: solana
-  image: http://www.alanaclason.ca/uploads/1/9/2/0/1920735/published/profile-f-pic.jpg?1543515225
+  image: http://www.alanaclason.ca/uploads/1/9/2/0/1920735/published/profile-f-pic.jpg
   image-shape: rounded
   links: 
     - icon: globe
       text: webpage
       href: http://www.alanaclason.ca/
+    - icon: github
+      text: GitHub
+      href: https://github.com/aclason
+      
 ---
 
 ::: {#alana}
@@ -19,5 +23,5 @@ about:
 
 Dissertation: Whitebark pine at the northern edge: current constraints and future potential northern distribution under a changing climate.
 
-Currently a postdoctoral fellow at the Bulkley Valley Research Centre.
+Currently a research fellow at the Bulkley Valley Research Centre.
 :::
