--- a/bios/julie.qmd
+++ b/bios/julie.qmd
@@ -18,6 +18,8 @@ about:
 ---
 
 ::: {#julie}
-Julie is currently with Biodiversity Pathways, collaborating with the Predictive Ecology group on issues related to caribou.
+Research Associate, Biodiversity Pathways.
+
+Julie has been collaborating with the Predictive Ecology group on issues related to caribou since 2021.
 
 :::
