--- a/bios/tati.qmd
+++ b/bios/tati.qmd
@@ -19,6 +19,10 @@ about:
 
 ::: {#tati}
 
-Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and trade-offs/synergies across disciplines.
+Research Associate, TU Dresden, Germany.
+
+Previously, Tati was a postdoc and research associate with at University of British Columbia from 2017-2023. 
+
+Tati has been asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and trade-offs/synergies across disciplines.
 
 :::
